--- a/TEST/PlayListWindow.xaml
+++ b/TEST/PlayListWindow.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Button Content="Import" Click="ImportButton_Click" Margin="10,10,690,386"/>
         <Button Content="CreatePlaylist" Click="CreatePlaylistButton_Click" Margin="115,10,580,386"/>
+        <TextBox x:Name="PlayListNameTextBox" FontSize="16" Margin="225,10,465,386" Text="New Playlist"/>
         <TextBox x:Name="TEST" FontSize="16" Margin="10,53,10,10"/>
     </Grid>
 </Window>
